Added our entities to the relevant vanilla entity type tags